# unit-hak-2026

./: .dockerignore  .env.compose.example  .gitignore  README.md  docker-compose.yml  fix_board.js  fix_board.patch  fix_reorder.patch
Backend/: .coveragerc  Dockerfile  app.db  docker-entrypoint.sh  init_db.py  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_initial.py  0002_sync_schema_with_models.py  0003_add_board_admin_settings.py
Backend/app/: main.py
Backend/app/api/: automation_rules.py  boards.py  columns.py  guests.py  health.py  incoming_tasks.py  notifications.py  openapi.py  router.py  tasks.py  uploads.py  ws.py
Backend/app/core/: config.py  database.py  health.py  logging.py
Backend/app/models/: __init__.py  automation_rule.py  board.py  column.py  domain_event.py  incoming_task.py  notification.py  task.py
Backend/app/queue/: consumer.py  message_types.py  publisher.py  rabbitmq.py
Backend/app/realtime/: __init__.py  broadcaster.py  connection_manager.py  routes.py
Backend/app/repositories/: board_repository.py  (+6 more)
Backend/tests/: conftest.py  test_automation_rules.py  test_boards.py  test_columns.py  test_config.py  test_database.py  test_events.py  test_guest_uploads_cleanup.py  test_health.py  test_incoming_tasks.py  test_logging.py  test_main.py  test_models.py  test_notifications.py  test_queue.py  test_ready_details.py  test_realtime_manager.py  test_realtime_routes.py  test_repositories.py  test_seed_service.py  test_services.py  test_tasks.py  test_worker.py  test_worker_logic.py  test_ws.py
(+116 files in other folders)
