[project]
name = "flowboard-backend"
version = "0.1.0"
description = "FlowBoard backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "pydantic",
  "pydantic-settings==2.6.0",
  "alembic==1.13.3",
  "psycopg[binary]",
  "python-dotenv==1.0.1",
  "pika==1.3.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "httpx==0.27.2",
  "ruff==0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=100 --cov-config=.coveragerc"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools]
packages = ["app"]
